--- a/client/project/src/modules/components/register.html
+++ b/client/project/src/modules/components/register.html
@@ -3,6 +3,7 @@
     Last Name: <input value.bind="user.lastName">
     Email: <input value.bind="user.email">
     Password: <input value.bind="user.password">
-    <button type="button" class="btn btn-primary btn-sm" click.trigger="save()">Save</button>
+<span>${registerError}</span>    
+<button type="button" class="btn btn-primary btn-sm" click.trigger="save()">Save</button>
 </template>
 
